name:                dash
version:             2
synopsis:            A simply typed lambda calculus toy thing
description:         An experimental/toy programming language.
homepage:            https://github.com/relrod/-
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (C) 2016 Ricky Elrod
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Dash.Context
                     , Language.Dash.Parser.Skye
                     , Language.Dash.Types
                     , Language.Dash.Utility
  build-depends:       base >= 4 && < 5
                     , parsers >= 0.12 && < 0.13
                     , trifecta >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
