name:                dash
version:             2
synopsis:            A simply typed lambda calculus toy thing
description:         An experimental/toy programming language.
homepage:            https://github.com/relrod/-
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (C) 2016 Ricky Elrod
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1, GHC == 8.0.2

source-repository head
  type:              git
  location:          git://github.com/relrod/-

library
  exposed-modules:     Language.Dash.Context
                     , Language.Dash.Parser.Skye
                     , Language.Dash.Typecheck
                     , Language.Dash.Types
                     , Language.Dash.Utility
  build-depends:       base >= 4 && < 5
                     , ansi-terminal >= 0.6 && < 0.7
                     , haskeline >= 0.7 && < 1
                     , parsers >= 0.12 && < 0.13
                     , trifecta >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable dashrepl
  main-is:             REPL.hs
  build-depends:       base >= 4 && < 5
                     , dash >= 2
                     , ansi-terminal >= 0.6 && < 0.7
                     , haskeline >= 0.7 && < 1
                     , parsers >= 0.12 && < 0.13
                     , trifecta >= 1 && < 2
                     , transformers >= 0.3 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
